update my username

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 </h1>
                 <h3 class="subtitle">
                     View details on <b>all</b> of Repl.it's supported langauges in one place!
-                    Created by <a href="//github.com/IreTheKID">IreTheKID</a>.
+                    Created by <a href="//github.com/frissyn">frissyn</a>.
                 </h3>
             </div>
         </div>
